--- a/front/partials/contrib/gogs.jade
+++ b/front/partials/contrib/gogs.jade
@@ -1,36 +1,26 @@
-block head
-    title Taiga  Your agile, free, and open source project management tool
+div(tg-gogs-webhooks, ng-controller="ContribGogsAdminController as ctrl")
+    header
+        h1(tg-main-title)
 
-block content
-    div.wrapper.roles(tg-gogs-webhooks, ng-controller="ContribGogsAdminController as ctrl",
-                            ng-init="section='admin'")
-        sidebar.menu-secondary.sidebar(tg-admin-navigation="contrib")
-            include ../views/modules/admin-menu
-        sidebar.menu-tertiary.sidebar(tg-admin-navigation="contrib-gogs")
-            include ../views/modules/admin-submenu-contrib
+    form
+        fieldset
+            label(for="secret-key") Secret key
+            input(type="text", name="secret-key", ng-model="gogs.secret", placeholder="Secret key", id="secret-key")
 
-        section.main.admin-common.admin-contrib
-            include ../views/components/mainTitle
+        fieldset
+            .select-input-text(tg-select-input-text)
+                div
+                    label(for="payload-url") Payload URL
+                    .field-with-option
+                        input(type="text", ng-model="gogs.webhooks_url", name="payload-url", readonly="readonly", placeholder="Payload URL", id="payload-url")
+                        .option-wrapper.select-input-content
+                            .icon.icon-copy
+                    .help-copy Copy to clipboard: Ctrl+C
 
-            form
-                fieldset
-                    label(for="secret-key") Secret key
-                    input(type="text", name="secret-key", ng-model="gogs.secret", placeholder="Secret key", id="secret-key")
-
-                fieldset
-                    .select-input-text(tg-select-input-text)
-                        div
-                            label(for="payload-url") Payload URL
-                            .field-with-option
-                                input(type="text", ng-model="gogs.webhooks_url", name="payload-url", readonly="readonly", placeholder="Payload URL", id="payload-url")
-                                .option-wrapper.select-input-content
-                                    .icon.icon-copy
-                            .help-copy Copy to clipboard: Ctrl+C
-
-                button(type="submit", class="hidden")
-                a.button.button-green.submit-button(href="", title="Save") Save
+        button(type="submit", class="hidden")
+        a.button.button-green.submit-button(href="", title="Save") Save
 
 
-            a.help-button(href="https://taiga.io/support/gogs-integration/", target="_blank")
-                span.icon.icon-help
-                span Do you need help? Check out our support page!
+    a.help-button(href="https://taiga.io/support/gogs-integration/", target="_blank")
+        span.icon.icon-help
+        span Do you need help? Check out our support page!
