Fix directive reference

--- a/front/partials/contrib/gogs.jade
+++ b/front/partials/contrib/gogs.jade
@@ -1,6 +1,6 @@
 |module.run(['$templateCache', ($templateCache) ->
 |  $templateCache.put('contrib/gogs', '''
-div(tg-gogs-webhooks, ng-controller="ContribGogsAdminController as ctrl")
+div(contrib-gogs-webhooks, ng-controller="ContribGogsAdminController as ctrl")
     header
         h1(tg-main-title)
 
