Fixed botton styles

--- a/front/partials/contrib/gogs.jade
+++ b/front/partials/contrib/gogs.jade
@@ -20,8 +20,8 @@ div(contrib-gogs-webhooks, ng-controller="ContribGogsAdminController as ctrl")
                     .help-copy Copy to clipboard: Ctrl+C
 
         button(type="submit", class="hidden")
-        a.button.button-green.submit-button(href="", title="Save") Save
-
+        a.button-green.submit-button(href="", title="Save")
+            span Save
 
     a.help-button(href="https://taiga.io/support/gogs-integration/", target="_blank")
         span.icon.icon-help
