--- a/front/partials/gogs.jade
+++ b/front/partials/gogs.jade
@@ -1,5 +1,5 @@
 |module.run(['$templateCache', ($templateCache) ->
-|  $templateCache.put('contrib/gogs', '''
+|  $templateCache.put('plugin/gogs', '''
 div(contrib-gogs-webhooks, ng-controller="ContribGogsAdminController as ctrl")
     header
         h1
@@ -11,14 +11,27 @@ div(contrib-gogs-webhooks, ng-controller="ContribGogsAdminController as ctrl")
     form
         fieldset
             label(for="secret-key") Secret key
-            input(type="text", name="secret-key", ng-model="gogs.secret", placeholder="Secret key", id="secret-key")
+            input(
+                type="text"
+                name="secret-key"
+                ng-model="gogs.secret"
+                placeholder="Secret key"
+                id="secret-key"
+            )
 
         fieldset
             .select-input-text(tg-select-input-text)
                 div
                     label(for="payload-url") Payload URL
                     .field-with-option
-                        input(type="text", ng-model="gogs.webhooks_url", name="payload-url", readonly="readonly", placeholder="Payload URL", id="payload-url")
+                        input(
+                            type="text"
+                            ng-model="gogs.webhooks_url"
+                            name="payload-url"
+                            readonly="readonly"
+                            placeholder="Payload URL"
+                            id="payload-url"
+                        )
                         .option-wrapper.select-input-content
                             .icon.icon-copy
                     .help-copy Copy to clipboard: Ctrl+C
