Add SVG directive

--- a/front/partials/gogs.jade
+++ b/front/partials/gogs.jade
@@ -31,8 +31,9 @@ div(contrib-gogs-webhooks, ng-controller="ContribGogsAdminController as ctrl")
                             id="payload-url"
                         )
                         .option-wrapper.select-input-content
-                            svg.icon.icon-clipboard
-                                use(xlink:href="#icon-clipboard")
+                            tg-svg(
+                                svg-icon="icon-clipboard"
+                            )
                     .help-copy Copy to clipboard: Ctrl+C
 
         button(type="submit", class="hidden")
@@ -40,6 +41,7 @@ div(contrib-gogs-webhooks, ng-controller="ContribGogsAdminController as ctrl")
             span Save
 
     a.help-button(href="https://taiga.io/support/gogs-integration/", target="_blank")
-        svg.icon.icon-question
-            use(xlink:href="#icon-question")
+        tg-svg(
+            svg-icon="icon-question"
+        )
         span Do you need help? Check out our support page!
