Build the front

--- a/front/partials/gogs.jade
+++ b/front/partials/gogs.jade
@@ -40,8 +40,9 @@ div(contrib-gogs-webhooks, ng-controller="ContribGogsAdminController as ctrl")
         a.button-green.submit-button(href="", title="Save")
             span Save
 
-    a.help-button(href="https://taiga.io/support/gogs-integration/", target="_blank")
-        tg-svg(
-            svg-icon="icon-question"
-        )
+    a.help-button(
+        href="https://tree.taiga.io/support/integrations/gogs-integration/"
+        target="_blank"
+    )
+        tg-svg(svg-icon="icon-question")
         span Do you need help? Check out our support page!
